--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -9,6 +9,17 @@
             <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
         </div>
     </div>
+    <p>
+        Well, hello there!
+    </p>
+    <p>
+        We're going to now talk to the GitHub API. Ready?
+        <a href="https://github.com/login/oauth/authorize?scope=user&client_id={{ github_client_id }}">Click here</a> to begin!</a>
+    </p>
+    <p>
+        If that link doesn't work, remember to provide your own <a href="/v3/oauth/#web-application-flow">Client ID</a>!
+    </p>
+
 {% endblock %}
 
 {% block main %}
