Expanding scope to include private repos too

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,7 +10,7 @@
 
             <p>
                 <a class="btn btn-primary btn-lg" role="button" id="sign-up"
-                   href="https://github.com/login/oauth/authorize?scope=user,read:org&client_id={{ github_client_id }}">
+                   href="https://github.com/login/oauth/authorize?scope=user,read:org,repo&client_id={{ github_client_id }}">
                     Sign up using Github
                 </a>
             </p>
