--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,7 +43,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">devboardxyz</a>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">devboardxyz</a>
                 </div>
                 <ul class="navbar-collapse collapse navbar-left nav navbar-nav ">
                     <li><a href="#" id="">link #1</a></li>
@@ -54,7 +54,7 @@
                             <li><a href="#">Hi {{ app.user.username }}!</a></li>
                             <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
                         {% else %}
-                            <li> <a href="https://github.com/login/oauth/authorize?scope={{ github_default_scope }}&client_id={{ github_client_id }}" id="sign-in">Sign in with Github</a></li>
+                            <li> <a href="{{ path('null_dev_user_connect_github') }}" id="sign-in">Sign in with Github</a></li>
                         {% endif %}
                     {% endblock %}
                 </ul>
