--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -15,7 +15,7 @@
 
             <p>
                 <a class="btn btn-primary btn-lg" role="button" id="sign-up"
-                   href="https://github.com/login/oauth/authorize?scope={{ github_default_scope }}&client_id={{ github_client_id }}">
+                   href="{{ path('null_dev_user_connect_github') }}">
                     Sign up using Github
                 </a>
             </p>
