Added internal status & text to dasbhoard

--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
@@ -9,6 +9,8 @@
             <th>Repo</th>
             <th>Branch</th>
             <th>Commit</th>
+            <th>Internal status</th>
+            <th>Internal status text</th>
             <th>CircleCI</th>
             <th>TravisCI</th>
             <th>ScrutinizerCI</th>
