--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
@@ -5,6 +5,12 @@
                 <td>{{ branch.lastCommit.message }}</td>
                 <td>{{ branch.lastCommit.internalStatus }}</td>
                 <td>{{ branch.lastCommit.internalStatusText }}</td>
+
+                <td>
+                    {% for status in branch.lastCommit.commitStatuses %}
+                    {{ status.githubExternalService.name }}:{{ status.stateText }} <br>
+                    {% endfor %}
+                </td>
                 <td>
                     <a href="https://circleci.com/gh/{{ branch.repo.fullName }}/tree/{{ branch.name }}" target="_blank">
                         <img src="https://circleci.com/gh/{{ branch.repo.fullName }}/tree/{{ branch.name }}.svg?style=shield#{{ "now"|date('U') }}"/>
