--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
@@ -26,12 +26,16 @@
         <div class="col-xs-8 col-sm-7 col-md-7 col-lg-8">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <span class="lead">
-                    {{ branch.repo.fullName }}
+                    <a href="{{ branch.repo.htmlUrl }}" target="_blank">
+                        {{ branch.repo.fullName }}
+                    </a>
                 </span>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <span class="lead">
-                    {{ branch.name }}
+                    <a href="{{ branch.repo.htmlUrl }}/tree/{{ branch.name }}" target="_blank">
+                        {{ branch.name }}
+                    </a>
                 </span>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
