--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
@@ -46,7 +46,7 @@
         </div>
         <div class="hidden-xs col-sm-2 col-md-2 col-lg-2">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <span class="text-info">{{ branch.updatedAt|ago }}</span>
+                <span class="text-muted">{{ branch.updatedAt|ago }}</span>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="display: none;">
                 <span class="text-muted">{{ branch.lastCommit.internalStatusText }} ({{ branch.lastCommit.internalStatus }})</span>
