--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/livebranches.html.twig
@@ -1,9 +1,9 @@
-{% for branch in branches %}
+{% for pullRequest in pullRequests %}
     <div class="row">
-        <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2">
-            {% for status in branch.lastCommit.commitStatuses %}
-                <div style="background-color:{{ status.stateColor }};display: inline-block; margin: 2px;">
-                    <div style="padding: 5px;">
+        <div class="col-xs-4 col-sm-3 col-md-3 col-lg-4 text-right">
+            {% for status in pullRequest.lastCommit.commitStatuses %}
+                <div style="background-color:{{ status.stateColor }};float: right; margin: 2px;height: 100%">
+                    <div style="padding: 5px;height: 70px; width: 70px;" class="text-center">
                         {% if status.githubExternalService.context == 'ci/circleci' %}
                             <a href="{{ status.targetUrl }}" target="_blank">
                                 {% image '@DevBoardCoreBundle/Resources/public/images/logo-stacked-grey.svg' %}
@@ -16,6 +16,30 @@
                                 <img src="{{ asset_url }}" alt="Example" width="50px"/>
                                 {% endimage %}
                             </a>
+                        {% elseif status.githubExternalService.context == 'continuous-integration/travis-ci/pr' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/mascot-bg-blue-74537338f8ec8ea2c0722b4d60f9777f.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'Shippable' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/shippable-logo-white.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'Scrutinizer' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/scrutinizer.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'coverage/coveralls' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/coveralls.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
                         {% else %}
                             {{ status.githubExternalService.name }}:{{ status.stateText }} <br>
                         {% endif %}
@@ -23,7 +47,91 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="col-xs-8 col-sm-7 col-md-7 col-lg-8">
+        <div class="col-xs-8 col-sm-7 col-md-7 col-lg-6">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <span class="lead">
+                    <a href="{{ pullRequest.repo.htmlUrl }}" target="_blank">
+                        {{ pullRequest.repo.fullName }}
+                    </a>
+                </span>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <span class="lead">
+                    <a href="{{ pullRequest.repo.htmlUrl }}/pull/{{ pullRequest.number }}" target="_blank">
+                        {{ pullRequest.title }}
+                    </a>
+                </span>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <span class="text-muted">
+                    {{ pullRequest.lastCommit.message }}
+                </span>
+            </div>
+        </div>
+        <div class="hidden-xs col-sm-2 col-md-2 col-lg-2">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <span class="text-muted">{{ pullRequest.updatedAt|ago }}</span>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="display: none;">
+                <span class="text-muted">{{ pullRequest.lastCommit.internalStatusText }} ({{ pullRequest.lastCommit.internalStatus }})</span>
+            </div>
+        </div>
+        <div class="clear-fix visible-xs">&nbsp;</div>
+    </div>
+{% endfor %}
+
+
+
+{% for branch in branches %}
+    <div class="row">
+        <div class="col-xs-4 col-sm-3 col-md-3 col-lg-4 text-right">
+            {% for status in branch.lastCommit.commitStatuses %}
+                <div style="background-color:{{ status.stateColor }};float: right; margin: 2px;height: 100%">
+                    <div style="padding: 5px;height: 70px; width: 70px;" class="text-center">
+                        {% if status.githubExternalService.context == 'ci/circleci' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/logo-stacked-grey.svg' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'continuous-integration/travis-ci/push' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/mascot-bg-blue-74537338f8ec8ea2c0722b4d60f9777f.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'continuous-integration/travis-ci/pr' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/mascot-bg-blue-74537338f8ec8ea2c0722b4d60f9777f.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'Shippable' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/shippable-logo-white.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'Scrutinizer' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/scrutinizer.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% elseif status.githubExternalService.context == 'coverage/coveralls' %}
+                            <a href="{{ status.targetUrl }}" target="_blank">
+                                {% image '@DevBoardCoreBundle/Resources/public/images/coveralls.png' %}
+                                <img src="{{ asset_url }}" alt="Example" width="50px"/>
+                                {% endimage %}
+                            </a>
+                        {% else %}
+                            {{ status.githubExternalService.name }}:{{ status.stateText }} <br>
+                        {% endif %}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="col-xs-8 col-sm-7 col-md-7 col-lg-6">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <span class="lead">
                     <a href="{{ branch.repo.htmlUrl }}" target="_blank">
