--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -96,7 +96,7 @@
             <hr>
 
             <footer>
-                <p>&copy; Company 2014</p>
+                <p>&copy; Devboard 2015</p>
             </footer>
         </div>
         {% endblock %}
