--- a/src/NullDev/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/NullDev/UserBundle/Resources/views/Security/login.html.twig
@@ -34,14 +34,12 @@
             <br/>
 
             <h1>Sign in using:</h1>
-            <a href="{{ path('null_dev_user_connect_github') }}" id="sign-in">
+            <a href="{{ path('null_dev_user_connect_github') }}" id="sign-in-large">
                 {% image '@NullDevUserBundle/Resources/public/images/GitHub/GitHub-Mark-120px-plus.png' %}
-                <img src="{{ asset_url }}" alt="Example"/>
+                <img src="{{ asset_url }}" alt="GitHub"/>
                 {% endimage %}
                 <br/>
-                Github
-
-
+                GitHub
             </a>
         </div>
 
