--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,7 +58,11 @@
                             <li><a href="#">Hi {{ app.user.username }}!</a></li>
                             <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
                         {% else %}
-                            <li> <a href="{{ path('null_dev_user_connect_github') }}" id="sign-in">Sign in with Github</a></li>
+                            <li>
+                                <a href="{{ path('null_dev_user_connect_github') }}" id="sign-in">
+                                    Sign in using GitHub
+                                </a>
+                            </li>
                         {% endif %}
                     {% endblock %}
                 </ul>
