--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -49,7 +49,7 @@
                     {% if app.user %}
                         <li><a href="{{ path('dashboard') }}" id="">Dashboard</a></li>
                         <li><a href="{{ path('project') }}" id="">Projects</a></li>
-                        <li><a href="{{ path('project_new') }}" id="">Add project</a></li>
+                        <li><a href="{{ path('github_all') }}" id="">Add project</a></li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-collapse collapse navbar-right nav navbar-nav">
