--- a/src/DevBoard/CoreBundle/Resources/views/Project/index.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Project/index.html.twig
@@ -1,47 +1,25 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Project list</h1>
+    <div class="container">
+        <h1>My projects</h1>
 
-    <table class="records_list">
-        <thead>
+        <table class="records_list">
+            <thead>
             <tr>
-                <th>Id</th>
-                <th>Projectname</th>
+                <th>Project</th>
                 <th>Active</th>
-                <th>Createdat</th>
-                <th>Updatedat</th>
-                <th>Actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('project_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.projectName }}</td>
-                <td>{{ entity.active }}</td>
-                <td>{% if entity.createdAt %}{{ entity.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if entity.updatedAt %}{{ entity.updatedAt|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('project_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('project_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for entity in entities %}
+                <tr>
+                    <td>{{ entity.projectName }}</td>
+                    <td>{% if entity.active %}<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>{% else %}<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>{% endif %}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('project_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+    </div>
+{% endblock %}
