--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
@@ -1,13 +1,12 @@
 {% extends '::base.html.twig' %}
 {% block title %}Your devboard{% endblock %}
 {% block body -%}
-    <div class="clear-fix"> &nbsp;</div>
-    <div id="app">Initing dashboard...</div>
-    <div id="branches">
-        {{ render(controller( 'DevBoardCoreBundle:Dashboard:livebranches' )) }}
+    <br>
+    <div id="app">
+        <div class="container">Initing dashboard...</div>
     </div>
-{% endblock %}
+{% endblock body %}
 
 {% block javascripts %}
     <script src="/static/js/build/bundle.js"></script>
-{% endblock %}
+{% endblock javascripts %}
