Page titles added/modified

--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
@@ -1,5 +1,5 @@
 {% extends '::base.html.twig' %}
-
+{% block title %}Your devboard{% endblock %}
 {% block body -%}
     <div class="clear-fix"> &nbsp;</div>
     <div id="branches">
