--- a/src/DevBoard/CoreBundle/Resources/views/Project/index.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Project/index.html.twig
@@ -1,5 +1,5 @@
 {% extends '::base.html.twig' %}
-
+{% block title %}devboard: Your projects{% endblock %}
 {% block body -%}
     <div class="container">
         <h1>My projects</h1>
