--- a/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/DevBoard/CoreBundle/Resources/views/Dashboard/index.html.twig
@@ -1,12 +1,25 @@
 {% extends '::base.html.twig' %}
 {% block title %}Your devboard{% endblock %}
 {% block body -%}
-    <br>
-    <div id="app">
-        <div class="container">Initing dashboard...</div>
+    <div class="clear-fix"> &nbsp;</div>
+    <div id="branches">
+        {{ render(controller( 'DevBoardCoreBundle:Dashboard:livebranches' )) }}
     </div>
-{% endblock body %}
+{% endblock %}
 
 {% block javascripts %}
-    <script src="/static/js/build/bundle.js"></script>
-{% endblock javascripts %}
+
+    <script>
+        function getData() {
+            $.ajax({
+                url: '{{ path('dashboard_livebranches') }}',
+                type: 'get',
+                success: function (html) {
+                    //$('#branches2').replaceWith('<tr><td>as</td></tr>');
+                    $('#branches').replaceWith('<div id="branches">' + html + '</div>');
+                }
+            });
+        }
+        setInterval(function(){getData();}, 10000);
+    </script>
+{% endblock %}
