--- a/web/static/stylesheet/main.css
+++ b/web/static/stylesheet/main.css
@@ -11,16 +11,34 @@ body {
     color: #333;
 }
 
-.db-item {
-    padding: 20px 0;
-    border-top: 1px solid #eee;
+.db-list {
+    /*padding: 0 15px;*/
+    /*border: 1px solid #eee;*/
+    /*border-radius: 3px;*/
 }
-    .db-item__hd {
-        padding-bottom: 5px;
-        font-size: 16px;
+
+.db-item {
+    margin-bottom: 10px;
+    border: 1px solid #eee;
+    border-radius: 4px;
+    background: -moz-linear-gradient(top, rgba(248,248,248,1) 0%, rgba(255,255,255,0) 100%);
+    background: -webkit-linear-gradient(top, rgba(248,248,248,1) 0%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(to bottom, rgba(248,248,248,1) 0%, rgba(255,255,255,0) 100%);
+}
+    .db-item__inner {
+        padding: 10px 15px;
+        border: 1px solid #fff;
+        border-radius: 4px;
     }
+    .db-item__hd {
+        padding-bottom: 10px;
+        font-size: 16px;
+        border-bottom: 1px solid #eee;
+    }
+        .db-item__hd code { background-color: #E2E0E1; }
+
     .db-item__bd {
-        padding-bottom: 7px;
+        padding: 10px 0;
         font-size: 12px;
     }
     .db-item__time {
@@ -47,7 +65,7 @@ body {
     font-size: 13px;
     border-radius: 3px;
     background: #ccc;
-    color: #fff;
+    color: #222;
     transition: color 0.3s ease-in-out;
 }
     .db-status--pending { background-color: #e4da4d; }
@@ -57,6 +75,7 @@ body {
 
     .db-status__icon {
         display: inline-block;
+        vertical-align: middle;
         padding: 5px;
         background: #555;
         color: #fff;
@@ -66,8 +85,11 @@ body {
     }
     .db-status__text {
         display: inline-block;
-        padding: 5px 7px;
+        vertical-align: middle;
+        padding: 4px 7px;
+        font-weight: bold;
     }
+    .db-status__text img { display: block; }
 
     .db-status:hover,
     .db-status:focus {
